--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jenniffer Barros
-description: Palestra: Comunicação em saúde
+description: Comunicação em saúde
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-tactile
