--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jenniffer Barros
-description: Teste
+description: Enfermeira Intensivista | Homecare | Teleconsulta COVID-19 | Pesquisa Clínica | Preceptora de estágio
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-tactile
